apps/production/heisenbridge/heisenbridge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heisenbridge
  namespace: matrix
  labels:
    app.kubernetes.io/name: heisenbridge
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: heisenbridge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: heisenbridge
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      containers:
        - image: hif1/heisenbridge:latest
          args: [
            "--config", "/data/appservice-registration-heisenbridge.yaml",
            "--owner", "@morguldir:sulian.eu",
            "--listen-address", "0.0.0.0",
            "--listen-port", "19898",
            "--identd", "--identd-port", "11331",
            "--safe-mode",
            "https://matrix.sulian.eu"
          ]
          name: heisenbridge
          ports:
            - containerPort: 19898
            - containerPort: 11331
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: heisenbridge-claim0
      restartPolicy: Always
      volumes:
        - name: heisenbridge-claim0
          persistentVolumeClaim:
            claimName: heisenbridge-claim0
status: {}
