apps/production/heisenbridge/heisenbridge-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: heisenbridge
  namespace: matrix
spec:
  ports:
    - name: "9898"
      port: 9898
      targetPort: 9898
    - name: "identd"
      port: 113
      targetPort: 113
      protocol: TCP
  selector:
    app.kubernetes.io/name: heisenbridge
status:
  loadBalancer: {}
