apps/production/heisenbridge/heisenbridge-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heisenbridge
  namespace: matrix
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"

spec:
  ingressClassName: nginx
  rules:
  - host: bridges.sulian.eu
    http:
      paths:
      - path: /_heisenbridge/media/
        pathType: Prefix
        backend:
          service: 
            name: heisenbridge
            port:
              number: 9898
  tls:
  - hosts:
    - bridges.sulian.eu
    secretName: matrix-bridges-cert
